[package]
name = "variyak"
authors = ["sharks <sharks@sharks>"]
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sharksforarms/variyak"
keywords = ["variadic", "vec"]
categories = ["development-tools::ffi"]
description = "macro to help call variadic functions given a container such as a Vec"
readme = "README.md"

[dependencies]
seq-macro = "0.2"

[dev-dependencies]
libc = "0.2"
